--- a/app/views/casts/_form.html.erb
+++ b/app/views/casts/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :about %>
-    <%= form.text_field :about %>
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.text_field :image %>
+    <%= form.label :picture %>
+    <%= form.text_field :picture %>
   </div>
 
   <div class="actions">
