--- a/app/views/casts/show.html.erb
+++ b/app/views/casts/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>About:</strong>
-  <%= @cast.about %>
+  <strong>Description:</strong>
+  <%= @cast.description %>
 </p>
 
 <p>
-  <strong>Image:</strong>
-  <%= @cast.image %>
+  <strong>Picture:</strong>
+  <%= @cast.picture %>
 </p>
 
 <%= link_to 'Edit', edit_cast_path(@cast) %> |
