--- a/app/views/casts/index.html.erb
+++ b/app/views/casts/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= cast.name %></td>
         <td><%= cast.description %></td>
-        <td><%= cast.picture %></td>
+<%= image_tag cast.picture_url, width: '100%' if cast.picture.present? %>
         <td><%= link_to 'Show', cast %></td>
         <td><%= link_to 'Edit', edit_cast_path(cast) %></td>
         <td><%= link_to 'Destroy', cast, method: :delete, data: { confirm: 'Are you sure?' } %></td>
