--- a/app/views/casts/show.html.erb
+++ b/app/views/casts/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Picture:</strong>
+<%= image_tag(@cast.picture_url, width: 300) if @cast.picture.present? %>
+</p>
+
+<p>
   <strong>Name:</strong>
   <%= @cast.name %>
 </p>
@@ -10,10 +15,7 @@
   <%= @cast.description %>
 </p>
 
-<p>
-  <strong>Picture:</strong>
-  <%= @cast.picture %>
-</p>
+
 
 
 <%= link_to 'Edit', edit_cast_path(@cast) %> |
